# suno-cli

./: .gitignore  API_INTELLIGENCE.md  Cargo.toml  GUIDE_CN.md  README.md
.github/workflows/: ci.yml  release.yml
assets/: SKILL.md
src/: auth.rs  captcha.rs  cli.rs  config.rs  download.rs  errors.rs  main.rs
src/api/: billing.rs  concat.rs  cover.rs  delete.rs  feed.rs  generate.rs  lyrics.rs  metadata.rs  mod.rs  persona.rs  remaster.rs  stems.rs  types.rs  upload.rs
src/output/: json.rs  mod.rs  table.rs
