[package]
name = "suno-cli"
version = "0.4.0"
edition = "2024"
description = "Generate AI music from your terminal — Suno v5.5 with tags, exclude, vocal control, and all generation features"
license = "MIT"
repository = "https://github.com/199-biotechnologies/suno-cli"
homepage = "https://github.com/199-biotechnologies/suno-cli"
readme = "README.md"
keywords = ["suno", "music", "ai", "cli", "audio"]
categories = ["command-line-utilities", "multimedia::audio"]

[[bin]]
name = "suno"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
figment = { version = "0.10", features = ["toml", "env"] }
comfy-table = "7"
owo-colors = "4"
indicatif = "0.17"
directories = "5"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
id3 = "1"
rookie = "0.5"
eyre = "0.6"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
