[package]
name = "suno"
version = "0.5.4"
edition = "2024"
description = "Generate AI music from your terminal — Suno v5.5 with tags, exclude, vocal control, and all generation features"
license = "MIT"
repository = "https://github.com/199-biotechnologies/suno-cli"
homepage = "https://github.com/199-biotechnologies/suno-cli"
readme = "README.md"
keywords = ["suno", "music", "ai", "cli", "audio"]
categories = ["command-line-utilities", "multimedia::audio"]

[[bin]]
name = "suno"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs", "process", "net"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
figment = { version = "0.10", features = ["toml", "env"] }
comfy-table = "7"
indicatif = "0.17"
directories = "5"
base64 = "0.22"
futures-util = "0.3"
id3 = "1"
rookie = "0.5"
uuid = { version = "1", features = ["v4"] }
self_update = { version = "0.42", default-features = false, features = ["rustls", "compression-flate2", "archive-tar"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
